Updated startup scripts.